--- a/index.html
+++ b/index.html
@@ -14,19 +14,21 @@
         }
 
         div {
-            text-align: center;
-            margin: auto;
-            background-color: aliceblue;
+            /* 居中 */
             position: absolute;
             left: 50%;
             top: 50%;
+            width: 200px;
+            height: 100px;
+            margin-left: -100px;
+            margin-top: -50px;
+            /* 颜色 */
         }
     </style>
 </head>
 
 <body>
-    <div>
-        世松小sb
+    <div>涛涛❤
     </div>
 </body>
 
